--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-sm navbar-default justify-content-between">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="btn btn-primary btn-sm" href="/user/juan"> projects </a>
+      <a class="btn btn-primary btn-sm" href="/user/{{ this.profileUsername }}"> projects </a>
     </li>
   </ul>
   <ul class="navbar-nav">
