--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,15 @@
 <blockquote class="quote-font">
-" IF YOU DON’T LIKE YOUR DESTINY, DON’T ACCEPT IT.
+  " Road to ninja is a web app used to manage your projects, it allows you
 
-  INSTEAD, HAVE THE COURAGE TO CHANGE IT THE WAY YOU WANT IT TO BE! "
+  to stay focus on one project at a time.
+
+  You can see other user's projects by using url "/user/username" for example /user/juan.
+
 </blockquote>
+
+<ul>
+  <li>Sign in</li>
+  <li>Create a project (+)</li>
+  <li>Add required projects to finish this project</li>
+  <li>Finish your projects and keep on ...</li>
+</ul>
