--- a/src/app/components/project-edit/project-edit.component.html
+++ b/src/app/components/project-edit/project-edit.component.html
@@ -5,10 +5,11 @@
 
 </div>
 <div class="form-group">
-  <textarea class="form-control project-description-font" [(ngModel)]="projectBeingUpdated.description"></textarea>
+  <textarea class="form-control project-description-font" placeholder="description"
+            [(ngModel)]="projectBeingUpdated.description"></textarea>
 </div>
 <div class="form-group">
-  <input class="form-control" type="text" id="sources" [(ngModel)]="projectBeingUpdated.data">
+  <input class="form-control" placeholder="sources" type="text" id="sources" [(ngModel)]="projectBeingUpdated.data">
 </div>
 
 <div class="form-group">
