chore(component): change instructions to use demo account

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
 </blockquote>
 
 <ul>
-  <li>Sign in</li>
+  <li>Sign in with username: demo and password: demo</li>
   <li>Create a project (+)</li>
   <li>Add required projects to finish this project</li>
   <li>Finish your projects and keep on ...</li>
