--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,34 +1,30 @@
-<div class="nav-bar-container mb-5">
-<nav class="navbar navbar-expand-sm navbar-default justify-content-between">
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="btn btn-primary btn-sm" href="/user/{{ getCurrentUserNanem() }}"> projects </a>
-    </li>
-  </ul>
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <app-filter-projects></app-filter-projects>
-    </li>
-  </ul>
-        <a class="menu-title-link menu-title-font navbar-brand" [routerLink]="['/']">
-          <h2>Road to ninja</h2>
-        </a>
-  <ul class="navbar-nav menu-right-side">
-    <li class="nav-item">
-      <app-button-project-add *ngIf="isUserLoggedIn()"></app-button-project-add>
-    </li>
-    <li class="nav-item">
-      <div class="nav-link" *ngIf="isUserLoggedIn()">
-        <button type="button" class="btn btn-primary btn-sm navbar-btn"
-                (click)="onLogout()"> Logout
-        </button>
-      </div>
-      <div class="nav-link" *ngIf="!isUserLoggedIn()">
-        <button type="button" class="btn btn-primary btn-sm navbar-btn"
-                (click)="onLogin()"> Login
-        </button>
-      </div>
-    </li>
-  </ul>
+<nav class="nav-bar">
+  <div class="navbar-item center">
+      <a class="menu-title-link menu-title-font" [routerLink]="['/']">
+        <h2>Road to ninja</h2>
+      </a>
+  </div>
+  <div class="navbar-item lateral right" *ngIf="this.isUserLogged; else login_bouton">
+      <span (click)="toggleMenuStatus()">
+          <i class="fa fa-bars fa-3x"></i>
+      </span>
+  </div>
+  <!-- sections -->
+  <div class="nav-section-container" *ngIf="this.isMenuOpened">
+    <a class="section-item" href=""> Projects </a>
+    <a class="section-item" href=""> Logout </a>
+  </div>
 </nav>
-</div>
+
+<!-- logout bouton template -->
+<ng-template #login_bouton>
+  <div class="navbar-item lateral right">
+    <button
+      type="button"
+      class="btn btn-primary btn-sm navbar-btn"
+      (click)="onLogin()"
+    >
+      Login
+    </button>
+  </div>
+</ng-template>
