--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -10,7 +10,7 @@
       </span>
   </div>
   <!-- sections -->
-  <div class="nav-section-container" *ngIf="this.isMenuOpened">
+  <div class="nav-section-container">
     <a class="section-item" href=""> Projects </a>
     <a class="section-item" href=""> Logout </a>
   </div>
