style: change navbar colors fonts

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="nav-bar">
-  <div class="navbar-item center">
-      <a class="menu-title-link menu-title-font" [routerLink]="['/']">
+  <div class="navbar-item nav-title">
+      <a class="nav-title-link" [routerLink]="['/']">
         <h2>Road to ninja</h2>
       </a>
   </div>
