--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -1,7 +1,13 @@
-.menu-title-link {
-  cursor: pointer;
-  color: #AF1944;
+.nav-title-link {
+  color: #cf09b9;
+  text-decoration: none;
 }
+
+.nav-title {
+  margin-top: 6px;
+  cursor: pointer;
+}
+
 
 .navbar-brand {
   padding: 0 15px;
@@ -27,24 +33,28 @@
 }
 
 .nav-bar {
-  background-color: cornflowerblue;
+  background-color:#181c44;
   min-height: 3rem;
+  padding: 15px 20px;
 }
 
 .nav-bar .section-item {
-  display: list-item;
+  display: block;
   height: 30px;
+  font-family: "Space Mono", monospace;
+  font-size: 1.4em;
+  line-height: 50px;
+  color: rgb(255, 255, 255)
 }
 
 .nav-section-container {
   text-align: center;
-  margin-top: 10px;
+  margin-top: 30px;
 }
 
 @media screen and (max-width: 720px) {
   .nav-bar .section-item {
-    display: list-item;
-    border: #AF1944 solid 1px;
+    display: block;
     height: 60px;
   }
 }
