--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ h3 {
 }
 
 body {
-  background-color: #2d1c44;
+  background-color: #1d2149;
   color: #fff;
   margin-bottom: 100px;
   overflow: hidden;
