--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -1,10 +1,12 @@
 .nav-title-link {
   color: #cf09b9;
   text-decoration: none;
+  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+  font-size: 21px;
 }
 
 .nav-title {
-  margin-top: 6px;
+  margin: 15px 0 0 20px;
   cursor: pointer;
 }
 
@@ -34,22 +36,15 @@
 
 .nav-bar {
   background-color:#181c44;
-  min-height: 3rem;
-  padding: 15px 20px;
+  min-height: 4.5rem;
 }
 
 .nav-bar .section-item {
   display: block;
-  height: 30px;
   font-family: "Space Mono", monospace;
   font-size: 1.4em;
   line-height: 50px;
   color: rgb(255, 255, 255)
-}
-
-.nav-section-container {
-  text-align: center;
-  margin-top: 30px;
 }
 
 #burger-menu-toggle {
@@ -58,6 +53,7 @@
 
 .burger-menu {
   cursor: pointer;
+  margin: 15px 20px 0 0;
 }
 
 
@@ -65,6 +61,8 @@
 
   .nav-section-container {
     display: none;
+    text-align: center;
+    margin-top: 30px;
   }
 
   #burger-menu-toggle:checked ~ .nav-section-container{
@@ -75,9 +73,10 @@
     display: block;
     height: 60px;
   }
+
 }
 
-@media screen and (min-width: 720px) and (max-width: 1200px) {
+@media screen and (min-width: 721px) and (max-width: 1200px) {
   .nav-bar .section-item {
     display: inline-block;
 
@@ -86,5 +85,17 @@
   .nav-section-container {
     display: inline-block;
     float: right;
+  }
+
+  .burger-menu {
+    display: none;
+  }
+
+  .btn-logout {
+    margin-left: 30px;
+  }
+
+  .nav-bar {
+    padding: 15px 20px 30px;
   }
 }
