--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,7 +1,7 @@
 <nav class="nav-bar">
   <div class="navbar-item nav-title">
       <a class="nav-title-link" [routerLink]="['/']">
-        <h2>Road to ninja</h2>
+        Road to ninja
       </a>
   </div>
   <input class="right" type="checkbox" id="burger-menu-toggle">
@@ -11,7 +11,7 @@
   <!-- sections -->
   <div class="nav-section-container">
     <a class="section-item" href=""> Projects </a>
-    <a class="section-item" href=""> Logout </a>
+    <a class="section-item btn-logout" href=""> Logout </a>
   </div>
 </nav>
 
