--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@ body {
   margin-bottom: 100px;
   overflow: hidden;
   font-size: 13px;
+  font-family: "Space Mono", monospace;
 }
 
 [class*="btn-primary"] {
