--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,10 @@ body {
   margin-bottom: 100px;
   overflow: hidden;
   font-size: 13px;
+  margin: 0;
+}
+
+* {
   font-family: "Space Mono", monospace;
 }
 
@@ -106,3 +110,4 @@ textarea:focus {
 .left {
   float: left;
 }
+
