--- a/src/app/components/auth/auth-form/auth-form.component.css
+++ b/src/app/components/auth/auth-form/auth-form.component.css
@@ -52,3 +52,16 @@
 .component {
   padding: 20px;
 }
+
+
+@media screen and (min-width: 768px) {
+  .component {
+    padding: 20px 200px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .component {
+    padding: 20px 400px;
+  }
+}
