--- a/src/app/components/user-projects/user-projects.component.html
+++ b/src/app/components/user-projects/user-projects.component.html
@@ -1,15 +1,21 @@
-<div class="row">
-  <div class="col-md-12 col-lg-12">
-    <h3 class="user-projects-name-color"> Projects owner: {{ user.name | titlecase }} </h3>
+<div class="component">
+  <div class="row">
+    <span class="owner-title">
+      Projects owner: {{ user.name | titlecase }}
+    </span>
   </div>
-</div>
-<div class="row" *ngIf="!(projects.length > 0)">
-  <div>
-    This user has any project for the moment
+  <div class="row" *ngIf="!(projects.length > 0)">
+    <div>
+      This user has any project for the moment
+    </div>
   </div>
-</div>
-<div class="row user-projects-scrolling">
-  <app-project-info class="col-lg-3 col-md-12 info-project" *ngFor="let project of projects"
-                    [project] = "project" [isUserLogged]="isUserLogged">
-  </app-project-info>
+  <div class="row user-projects-scrolling">
+    <app-project-info
+      class="col-lg-3 col-md-12 info-project"
+      *ngFor="let project of projects"
+      [project]="project"
+      [isUserLogged]="isUserLogged"
+    >
+    </app-project-info>
+  </div>
 </div>
