--- a/src/app/components/user-projects/user-projects.component.css
+++ b/src/app/components/user-projects/user-projects.component.css
@@ -10,3 +10,11 @@
   overflow-y: scroll!important;
   height: 500px;
 }
+
+.owner-title {
+  padding: 0 1.8em;
+}
+
+.component {
+  margin-top: 30px;
+}
