--- a/src/styles.css
+++ b/src/styles.css
@@ -12,8 +12,8 @@ body {
   background-color: #1d2149;
   color: #fff;
   margin-bottom: 100px;
-  overflow: hidden;
-  font-size: 13px;
+  overflow-y: hidden;
+  font-size: 16px;
   margin: 0;
 }
 
@@ -40,26 +40,9 @@ body {
   border-color: transparent!important;
 }
 
-.btn-outline-success {
-  color: #a3153d;
-  background-color: transparent;
-  border-color: #ff195b;
-}
-
-.btn-outline-success:hover {
-  color: #ffffff;
-  background-color: #A3153D;
-  border-color: #ff195b;
-}
-
 .badge {
   font-size: 87%!important;
   margin-top: 3px;
-}
-
-.badge-success {
-  background-color: #1AC400;
-  color: #212529;
 }
 
 .list-group-item-info {
