fix: scrolling adapt for every device
use autoscroll and fix navbar with position fixed top 0 and width 100%

--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -19,6 +19,9 @@
 .nav-bar {
   background-color:#181c44;
   min-height: 4.5rem;
+  position: fixed;
+  top:0;
+  width: 100%;
 }
 
 .section-item {
