--- a/src/styles.css
+++ b/src/styles.css
@@ -11,8 +11,6 @@ h3 {
 body {
   background-color: #1d2149;
   color: #fff;
-  margin-bottom: 100px;
-  overflow-y: hidden;
   font-size: 16px;
   margin: 0;
 }
@@ -94,3 +92,6 @@ textarea:focus {
   float: left;
 }
 
+.container {
+  margin-top: 100px;
+}
