fix: menu has not default value for userLoggedIn status
menu was listen for hook when user logge in change but before any change we need to set default value

--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -27,7 +27,7 @@
 .section-item {
   display: block;
   font-family: "Space Mono", monospace;
-  font-size: 1.4em;
+  font-size: 1.2em;
   line-height: 50px;
   color: rgb(255, 255, 255);
   text-decoration: none;
@@ -100,8 +100,8 @@ div.nav-title {
   }
 
   .nav-section-container {
-    display: inline-block;
     float: right;
+    margin-right: 50px;
   }
 
   .burger-menu {
@@ -113,6 +113,6 @@ div.nav-title {
   }
 
   .nav-bar {
-    padding: 15px 20px;
+    padding: 15px 20px 0;
   }
 }
