--- a/src/app/components/user-projects/user-projects.component.html
+++ b/src/app/components/user-projects/user-projects.component.html
@@ -9,7 +9,7 @@
       This user has any project for the moment
     </div>
   </div>
-  <div class="row user-projects-scrolling">
+  <div class="project-info-component">
     <app-project-info
       class="col-lg-3 col-md-12 info-project"
       *ngFor="let project of projects"
