chore(ui): add grids for desktop responsive
3 columns when screen is greated than 721px and 4 when it is 1280px >

--- a/src/app/components/project-info/project-info.component.css
+++ b/src/app/components/project-info/project-info.component.css
@@ -57,27 +57,20 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .component {
-    width: 28.7%;
-    display: inline-grid;
-    margin-right: 20px;
-  }
-
-  .btn-change-status {
-    float: left;
-    margin-top: 30px;
-  }
 
   .btn-change-status:hover {
     background-color: #27ec48;
     cursor: pointer;
   }
+
 }
 
-@media screen and (min-width: 1200px) {
-  .component {
-    width: 22.4%;
-    display: inline-grid;
-    margin-right: 20px;
+@media screen and (min-width: 721px) {
+
+  .btn-change-status {
+    display: block;
+    float: none;
+    margin-top: 30px;
   }
+
 }
