--- a/src/app/components/modal-trello-like/modal-trello-like.component.html
+++ b/src/app/components/modal-trello-like/modal-trello-like.component.html
@@ -2,7 +2,7 @@
       <div class="modal-content-editor" [ngStyle]="editorPositionStyle()">
         <template class="project-editor-container" #projectEditorContainer> </template>
       </div>
-      <div class="modal-content-save">
-        <button class="btn btn-success btn-sm" [ngStyle]="saveButtonPosition()" [disabled]="hasFormErrors" (click)="onSaveProject()"> save </button>
+      <div class="modal-content-save" [style.marginLeft.px]="this.editorPosition.left">
+        <button class="btn-save" [ngStyle]="saveButtonPosition()" [disabled]="hasFormErrors" (click)="onSaveProject()"> save </button>
       </div>
 </div>
