chore: add button component to user project page

--- a/src/app/components/modal-trello-like/modal-trello-like.component.css
+++ b/src/app/components/modal-trello-like/modal-trello-like.component.css
@@ -59,6 +59,13 @@
   font-size: 0.9em;
 }
 
+.btn-save:disabled {
+  cursor: none;
+  pointer-events: none;
+  background-color: #75cade;
+  color: gray
+}
+
 .btn-save:hover {
   background-color: #27ec48;
   cursor: pointer;
