chore(ui): add filter component in user project page
filter contains input search and button to clear it. Clear button is not functional working. Only ui was did here

--- a/src/app/components/user-projects/user-projects.component.css
+++ b/src/app/components/user-projects/user-projects.component.css
@@ -17,6 +17,10 @@
   margin-bottom: 30px;
 }
 
+.component-filter {
+  margin-bottom: 30px;
+}
+
 
 @media screen and (min-width: 721px) {
   .component {
