--- a/src/app/components/filter-projects/filter-projects.component.css
+++ b/src/app/components/filter-projects/filter-projects.component.css
@@ -1,3 +1,19 @@
-.filter-select-height {
-  height: 4px;
+.search-input {
+  width: 100%;
+  font-size: 1em;
+  background-color: rgb(40, 46, 104);
+  color: rgb(255, 255, 255);
+  border: 1px solid rgb(39, 199, 236);
+  padding: 8px 7px;
+  box-sizing: border-box;
+  border-radius: 3px;
+  font-family: FontAwesome, "Open Sans";
+}
+
+.clear-search-input {
+  float: right;
+  position: relative;
+  top: -25px;
+  right: 10px;
+  color: rgb(39, 199, 236);
 }
