--- a/src/app/components/filter-projects/filter-projects.component.html
+++ b/src/app/components/filter-projects/filter-projects.component.html
@@ -1,16 +1,9 @@
-<div class="form-inline my-2 mt-2 ml-5">
-  <div class="form-group">
-  <select name="status" id="status-id" title="" (change)="onFilterProjects()" [(ngModel)]="statusFilter"
-          class="form-control mr-sm-2 form-control-sm">
-    <option value="">status</option>
-    <option value="in progress">in progress</option>
-    <option value="not started">not started</option>
-    <option value="finished">finished</option>
-  </select>
-  </div>
-  <div class="form-group">
+<div class="component">
+  <div class="input-item">
   <input [(ngModel)]="searchUserInput" (keyup)="onFilterProjects()"
-         type="search" title="" placeholder="search by name..."
-         class="form-control form-control-sm mr-sm-2" aria-label="Search">
+         type="search" title="" placeholder="&#xF002; search by name"
+         class="search-input" aria-label="Search">
   </div>
+  <i class="far fa-times-circle clear-search-input"></i>
+
 </div>
