--- a/src/app/components/user-projects/user-projects.component.html
+++ b/src/app/components/user-projects/user-projects.component.html
@@ -1,4 +1,7 @@
 <div class="component">
+  <div class="component-filter">
+    <app-filter-projects></app-filter-projects>
+  </div>
   <div class="component-header">
     <span class="owner-title">
       Projects owner: {{ user.name | titlecase }}
