--- a/src/app/components/filter-projects/filter-projects.component.html
+++ b/src/app/components/filter-projects/filter-projects.component.html
@@ -1,9 +1,18 @@
 <div class="component">
   <div class="input-item">
-  <input [(ngModel)]="searchUserInput" (keyup)="onFilterProjects()"
-         type="search" title="" placeholder="&#xF002; search by name"
-         class="search-input" aria-label="Search">
+    <input
+      [(ngModel)]="searchUserInput"
+      (keyup)="onFilterProjects()"
+      type="text"
+      title=""
+      placeholder="&#xF002; search by name"
+      class="search-input"
+      aria-label="Search"
+    />
   </div>
-  <i class="far fa-times-circle clear-search-input"></i>
-
+  <i
+    class="far fa-times-circle fa-lg clear-search-input"
+    *ngIf="isSearchFilled()"
+    (click)="clearSearchField()"
+  ></i>
 </div>
