--- a/src/app/components/user-projects/user-projects.component.html
+++ b/src/app/components/user-projects/user-projects.component.html
@@ -18,7 +18,7 @@
   <div class="project-info-component">
     <app-project-info
       class="col-lg-3 col-md-12 info-project"
-      *ngFor="let project of projects"
+      *ngFor="let project of filteredProjects"
       [project]="project"
       [isUserLogged]="isUserLogged"
     >
