--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -6,7 +6,8 @@
   </div>
   <input class="right" type="checkbox" id="burger-menu-toggle">
   <label for="burger-menu-toggle" class="burger-menu navbar-item lateral right" *ngIf="this.isUserLogged; else login_bouton">
-      <i class="fa fa-bars fa-3x"></i>
+      <i class="fa fa-bars fa-3x open-icon"></i>
+      <i class="fas fa-times fa-3x close-icon"></i>
   </label>
   <!-- sections -->
   <div class="nav-section-container" *ngIf="this.isUserLogged">
