chore: add cursor pointer to logout button

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -12,7 +12,7 @@
   <!-- sections -->
   <div class="nav-section-container" *ngIf="this.isUserLogged">
     <a class="section-item" href=""> Projects </a>
-    <a class="section-item btn-logout" (click)="onLogout()"> Logout </a>
+    <a class="section-item btn-logout" href="" (click)="onLogout()"> Logout </a>
   </div>
 </nav>
 
