--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -52,7 +52,6 @@
 
 .navbar-item {
   margin: 15px 20px 0 0;
-
 }
 
 div.nav-title {
@@ -102,6 +101,7 @@ div.nav-title {
   .nav-bar .section-item {
     display: block;
     height: 60px;
+    cursor:pointer;
   }
 
 }
