chore: add border color when input is focused (user write in)

--- a/src/app/components/project-edit/project-edit.component.css
+++ b/src/app/components/project-edit/project-edit.component.css
@@ -9,6 +9,10 @@
   border-radius: 3px;
 }
 
+.editior-input:focus {
+  border-color: rgb(0, 255, 149);
+}
+
 .editor-title {
   margin-bottom: 7px;
 }
