fix(ui): position of login button. sticket to right screen

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -18,7 +18,7 @@
 
 <!-- logout bouton template -->
 <ng-template #login_bouton>
-  <div class="navbar-item lateral right">
+  <div class="navbar-item right nav-login">
     <button
       type="button"
       class="navbar-btn"
