--- a/src/app/components/project-info/project-info.component.html
+++ b/src/app/components/project-info/project-info.component.html
@@ -14,9 +14,7 @@
         </span>
       </div>
       <span class="box-title">{{ project.title | titlecase }}</span>
-      <span class="box-description">
-        {{ project.description }}
-      </span>
+      <span class="box-description">{{ project.description }}</span>
       <span class="box-link">
           <a title="{{ project.data }}" ref="noopener" target="_blank" href="{{ project.data }}">
               <i class="fas fa-link"></i>
