--- a/src/app/components/auth/auth-form/auth-form.component.html
+++ b/src/app/components/auth/auth-form/auth-form.component.html
@@ -13,11 +13,11 @@
   <div>
     <div class="form-set">
       <label for="username">username</label>
-      <input type="text" id="username" [(ngModel)]="username" autofocus class="form-field"> <BR>
+      <input type="text" id="username" [(ngModel)]="username" class="form-field" autofocus> <BR>
     </div>
     <div class="form-set">
       <label for="password">password</label>
-      <input type="password" id="password" [(ngModel)]="password" class="form-field" autofocus> <BR>
+      <input type="password" id="password" [(ngModel)]="password" class="form-field"> <BR>
     </div>
     <div class="form-set">
       <button type="button" (click)="onSubmitLogin()" class="btn-sign-in">
