--- a/src/app/components/project-info/project-info.component.html
+++ b/src/app/components/project-info/project-info.component.html
@@ -13,7 +13,7 @@
           <i class="fas fa-edit fa-lg btn-edit-icon"></i>
         </span>
       </div>
-      <span class="box-title">{{ project.title | titlecase }}</span>
+      <span class="box-title">{{ project.title }}</span>
       <span class="box-description">{{ project.description }}</span>
       <span class="box-link">
           <a title="{{ project.data }}" ref="noopener" target="_blank" href="{{ project.data }}">
