--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -109,6 +109,7 @@ div.nav-title {
 @media screen and (min-width: 721px) {
   .nav-bar .section-item {
     display: inline-block;
+    cursor:pointer;
 
   }
 
