chore: remove image at home page; change text and add instructions

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="component">
-  <img class="image-container img" src="../../../assets/home.png" alt="projects">
   <span class="description">
       Project management web app
       <span class="sub-description"> Inspired by trello</span>
   </span>
+
+  <span class="instructions"> To connect as guest use: username: demo & password: demo </span>
 </div>
