--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,12 +1,8 @@
-.img {
-  width: 100%;
-  height: auto;
-}
-
 .description {
   font-size: 2.2em;
   text-align: center;
   display: block;
+  margin-top: 50%;
 }
 
 .sub-description {
@@ -14,6 +10,12 @@
   text-align: center;
   font-size: 1.2rem;
   display: block;
+}
+
+.instructions {
+  display: block;
+  padding: 30px;
+  text-align: center;
 }
 
 @media screen and (min-width: 721px) {
@@ -24,10 +26,11 @@
 
   .description {
     font-size: 2em;
-    display: inline-block;
+    display: block;
     font-size: 2em;
-    width: 59%;
-    margin-top: 10%;
+    margin-top: 20%;
+    margin-left: 30%;
+    margin-right: 30%;
   }
 
   .sub-description {
